# yarp-armarx

./: .gitignore  CMakeLists.txt  README.md
ArmarXYarpBridge/: CMakeLists.txt
ArmarXYarpBridge/data/iCub/: iCub.xml  iCub_Head.xml  iCub_LeftArm.xml  iCub_LeftHand.xml  iCub_RightArm.xml  iCub_RightHand.xml
ArmarXYarpBridge/data/models/blender/: milk_box.blend  nesquik.blend  nesquik.x
ArmarXYarpBridge/data/models/blender/kitchen/: NewKitchenARMARTranslationNoWalls.blend  kitchen.x  kitchen_icub.blend  side_board.x  table.dxf  table_middle.x  table_round.x  walls.x
ArmarXYarpBridge/data/models/blender/kitchen/VRML/: fridge.wrl  lower_sideboard.wrl  table_side_b.wrl  upper_sink.wrl  wall_sink.wrl
ArmarXYarpBridge/data/models/blender/kitchen/bigKitchen/: NewKitchen_cut4convex.blend  kitchen.x  side_board.x  table_middle.x  table_round.x  walls.x
ArmarXYarpBridge/data/models/blender/kitchen/bigKitchen/VRML/: control_table.wrl  dish_washer.wrl  lower_sink.wrl  oven.wrl  table_side_a.wrl  table_top.wrl  upper_sideboard.wrl  windows.wrl
ArmarXYarpBridge/data/models/blender/kitchen/smallKitchen/: kitchen_small.blend  kitchen_small.x  walls_small.blend  walls_small.x
ArmarXYarpBridge/data/models/blender/objects/: cube.blend  cube.x  milk_box.blend  milk_box.blend1  milk_box.x  nesquik_real.blend  nesquik_real.x
ArmarXYarpBridge/etc/cmake/: UseArmarXYarpBridge.cmake
ArmarXYarpBridge/interface/: CMakeLists.txt
ArmarXYarpBridge/interface/slice/: .gitkeep
ArmarXYarpBridge/scenarios/: CMakeLists.txt
ArmarXYarpBridge/scenarios/ArmarXYarpBridge/: CMakeLists.txt  startScenario.sh  stopScenario.sh  test.armarxgui
ArmarXYarpBridge/scenarios/ArmarXYarpBridge/config/: YarpHandUnitApp.cfg  YarpImageProviderApp.cfg  YarpKinematicUnitApp.cfg  YarpPlatformUnitApp.cfg
ArmarXYarpBridge/source/: CMakeLists.txt
ArmarXYarpBridge/source/ArmarXYarpBridge/: CMakeLists.txt
ArmarXYarpBridge/source/ArmarXYarpBridge/applications/: CMakeLists.txt
ArmarXYarpBridge/source/ArmarXYarpBridge/applications/YarpHandUnit/: CMakeLists.txt  YarpHandUnitApp.h  main.cpp
ArmarXYarpBridge/source/ArmarXYarpBridge/applications/YarpImageProvider/: CMakeLists.txt  YarpImageProviderApp.h  main.cpp
ArmarXYarpBridge/source/ArmarXYarpBridge/applications/YarpKinematicUnit/: CMakeLists.txt  YarpKinematicUnitApp.h  main.cpp
ArmarXYarpBridge/source/ArmarXYarpBridge/applications/YarpPlatformUnit/: CMakeLists.txt  YarpPlatformUnitApp.h  main.cpp
ArmarXYarpBridge/source/ArmarXYarpBridge/armarx-objects/: CMakeLists.txt
ArmarXYarpBridge/source/ArmarXYarpBridge/armarx-objects/YarpHandUnit/: CMakeLists.txt  YarpHandUnit.cpp  YarpHandUnit.h
ArmarXYarpBridge/source/ArmarXYarpBridge/armarx-objects/YarpHandUnit/test/: CMakeLists.txt  YarpHandUnitTest.cpp
ArmarXYarpBridge/source/ArmarXYarpBridge/armarx-objects/YarpImageProvider/: CMakeLists.txt  YarpImageProvider.cpp  YarpImageProvider.h  YarpImageProviderApp.h  main.cpp
ArmarXYarpBridge/source/ArmarXYarpBridge/armarx-objects/YarpKinematicUnit/: CMakeLists.txt  YarpKinematicUnit.cpp  YarpKinematicUnit.h  YarpMotorInterfaceHelper.cpp  YarpMotorInterfaceHelper.h
ArmarXYarpBridge/source/ArmarXYarpBridge/armarx-objects/YarpKinematicUnit/test/: CMakeLists.txt  YarpKinematicUnitTest.cpp
ArmarXYarpBridge/source/ArmarXYarpBridge/armarx-objects/YarpPlatformUnit/: CMakeLists.txt  YarpPlatformUnit.cpp  YarpPlatformUnit.h
ArmarXYarpBridge/source/ArmarXYarpBridge/armarx-objects/YarpPlatformUnit/test/: CMakeLists.txt  YarpPlatformUnitTest.cpp
ArmarXYarpBridge/source/ArmarXYarpBridge/interface/: CMakeLists.txt
YARPImageProvider/: .YARPImageProviderApp.h.swp  CMakeLists.txt  YARPImageProvider.cpp  YARPImageProvider.h  YARPImageProviderApp.h  main.cpp
YarpArmarxBridge/: .gitignore  CMakeLists.txt
YarpArmarxBridge/etc/cmake/: UseYarpArmarxBridge.cmake
YarpArmarxBridge/interface/: CMakeLists.txt
YarpArmarxBridge/scenarios/: CMakeLists.txt
YarpArmarxBridge/scenarios/YarpArmarxBridge/: CMakeLists.txt  startScenario.sh  stopScenario.sh
YarpArmarxBridge/scenarios/YarpArmarxBridge/config/: ArmarxFrameGrabberApp.cfg  ArmarxMotorControlApp.cfg
YarpArmarxBridge/source/: CMakeLists.txt
YarpArmarxBridge/source/YarpArmarxBridge/: CMakeLists.txt
YarpArmarxBridge/source/YarpArmarxBridge/applications/: CMakeLists.txt
YarpArmarxBridge/source/YarpArmarxBridge/applications/ArmarxFrameGrabber/: ArmarxFrameGrabberApp.h  CMakeLists.txt  main.cpp
YarpArmarxBridge/source/YarpArmarxBridge/applications/ArmarxMotorControl/: ArmarxMotorControlApp.h  CMakeLists.txt  main.cpp
YarpArmarxBridge/source/YarpArmarxBridge/armarx-objects/: CMakeLists.txt
YarpArmarxBridge/source/YarpArmarxBridge/armarx-objects/ArmarxFrameGrabber/: ArmarxFrameGrabber.cpp  ArmarxFrameGrabber.h  CMakeLists.txt
YarpArmarxBridge/source/YarpArmarxBridge/armarx-objects/ArmarxMotorControl/: ArmarxMotorControl.cpp  ArmarxMotorControl.h  CMakeLists.txt  YarpMotorControlHelper.cpp  YarpMotorControlHelper.h
YarpArmarxBridge/source/YarpArmarxBridge/armarx-objects/ArmarxMotorControl/test/: ArmarxMotorControlTest.cpp  CMakeLists.txt
YarpArmarxBridge/source/YarpArmarxBridge/interface/: CMakeLists.txt
components/: CMakeLists.txt  README.md
components/YARPImageProvider/: YARPImageProvider.cpp  YARPImageProvider.h  YARPImageProviderApp.h  main.cpp
conf/: README.md  camera_icub_320x240.txt  camera_icub_640x480.txt  icub-cam.cfg
manifests/applications/: icub-cam.xml
models/blender/: milk_box.x  nesquik.blend
scripts/: prepare_simulator.sh
tests/: icub-cam.cfg
tests/cannyFilter/: CMakeLists.txt  Detector.cpp  Detector.h  objectDetector.cpp
tests/scripts/: prepare_simulator.sh
